--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-// @use "../components/header";
+@use "../components/header";
 @import "../components/library";
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
 
@@ -82,62 +82,4 @@ ul {
 }
 .visible {
 	display: block;
-}
-
-// @import "./library";
-
-// Mobile First
-header {
-	color: $white;
-	background-color: $blue;
-	position: relative;
-	nav {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		width: 100%;
-		padding: 1rem 1.5rem;
-		div {
-			a {
-				font-size: 1.25rem;
-				font-weight: 800;
-				letter-spacing: 0.1rem;
-			}
-			ul {
-				display: none;
-			}
-		}
-	}
-	menu {
-		position: absolute;
-		display: none;
-		width: 100%;
-		height: 100vh;
-		color: $white;
-		top: 0;
-		left: 0;
-		z-index: 10;
-		background-color: $blue;
-		li {
-			margin: 0 0 0 auto;
-			position: relative;
-			top: 4rem;
-			padding: 1rem;
-			border-bottom: 1px solid #ffffff80;
-			::before {
-				content: "+";
-				font-size: 1.5rem;
-				margin-right: 2rem;
-			}
-			a {
-				font-size: 1rem;
-			}
-		}
-
-		button {
-			position: absolute;
-			top: 1rem;
-			right: 1rem;
-		}
-	}
 }
