--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -4,6 +4,7 @@ header {
 	color: $white;
 	background-color: $blue;
 	position: relative;
+	padding-bottom: 1rem;
 	nav {
 		display: flex;
 		justify-content: space-between;
@@ -82,11 +83,30 @@ header {
 				padding: 0.875rem 1.75rem;
 				border: 2px solid $white;
 				border-radius: 2rem;
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+				gap: 3rem;
+				width: 60%;
+				color: $ligter-white;
+				position: relative;
+				@include text-sm;
+				span {
+					position: absolute;
+					border: 1.5px $white solid;
+					border-radius: 100%;
+					@include text-2xl;
+					right: 0;
+					height: 3rem;
+					width: 3rem;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+				}
 			}
 		}
 		img {
-			width: 60%;
-			margin: 0 auto;
+			display: none;
 		}
 	}
 }
