--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import "components/library", "components/header";
+@import "components/library", "components/header", "components/requirement";
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
 
 *,
@@ -91,4 +91,37 @@ ul {
 .container-fluid {
 	width: 95%;
 	margin: 0 auto;
+}
+
+// Animation
+.animate-pulse {
+	animation: animate-pulseHB 3s ease 0s infinite normal both;
+}
+
+@keyframes animate-pulseHB {
+	0% {
+		animation-timing-function: ease-out;
+		transform: scale(1);
+		transform-origin: center center;
+	}
+
+	10% {
+		animation-timing-function: ease-in;
+		transform: scale(0.91);
+	}
+
+	17% {
+		animation-timing-function: ease-out;
+		transform: scale(0.98);
+	}
+
+	33% {
+		animation-timing-function: ease-in;
+		transform: scale(0.87);
+	}
+
+	45% {
+		animation-timing-function: ease-out;
+		transform: scale(1);
+	}
 }
