--- a/src/components/_requirement.scss
+++ b/src/components/_requirement.scss
@@ -2,27 +2,8 @@
 
 main {
 	width: 100%;
-	section {
+	.requirements {
 		position: relative;
-		.elements {
-			position: absolute;
-			right: 0;
-			top: 0;
-			div {
-				@include text-9xl;
-				font-weight: 800;
-				color: $light-white;
-			}
-			div:nth-child(2) {
-				-moz-transform: scale(1, -1);
-				-webkit-transform: scale(1, -1);
-				-o-transform: scale(1, -1);
-				-ms-transform: scale(1, -1);
-				transform: scale(1, -1);
-
-				line-height: 0.7;
-			}
-		}
 		.container {
 			padding-top: 5rem;
 			position: relative;
@@ -31,6 +12,7 @@ main {
 				@include text-3xl;
 				font-weight: 800;
 				text-transform: uppercase;
+				color: $blue;
 			}
 			div {
 				p {
@@ -38,6 +20,13 @@ main {
 				}
 				a {
 					text-decoration: underline;
+				}
+			}
+		}
+		.carousel {
+			.owl-carousel {
+				.item {
+					margin: 2rem;
 				}
 			}
 		}
