--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import "components/library", "components/header", "components/requirement";
+@import "components/library", "components/header", "components/requirement", "components/inspiration";
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
 
 *,
@@ -123,5 +123,87 @@ ul {
 	45% {
 		animation-timing-function: ease-out;
 		transform: scale(1);
+	}
+}
+
+.absolute-left {
+	left: 0;
+	top: 0;
+}
+
+.absolute-right {
+	right: 0;
+	top: 0;
+}
+
+.elements {
+	position: absolute;
+
+	div {
+		@include text-7xl;
+		font-weight: 800;
+		color: $light-white;
+		line-height: 0.9;
+	}
+	div:nth-child(3) {
+		margin-top: -0.5rem;
+	}
+	div:nth-child(2),
+	div:nth-child(4) {
+		-moz-transform: scale(1, -1);
+		-webkit-transform: scale(1, -1);
+		-o-transform: scale(1, -1);
+		-ms-transform: scale(1, -1);
+		transform: scale(1, -1);
+	}
+}
+
+.card {
+	width: 100%;
+	padding: 3rem;
+	background-color: $ligter-white;
+	border: 1px solid $light-white;
+	border-radius: 3rem;
+	box-shadow: rgba(0, 0, 0, 0.2) 3px 5px 6px;
+	img {
+		max-height: 12rem;
+		object-fit: contain;
+		width: 100%;
+	}
+	.card-title {
+		@include text-xl;
+		font-weight: 700;
+		letter-spacing: 1.7px;
+		margin-top: 1rem;
+	}
+	.card-body {
+		p {
+			@include text-sm;
+			letter-spacing: 0.8px;
+			font-weight: 400;
+			margin: 0.5rem 0;
+			text-wrap: balance;
+		}
+		a {
+			@include text-sm;
+			letter-spacing: 0.8px;
+			font-weight: 600;
+			color: $green;
+			display: flex;
+			align-items: center;
+			justify-content: start;
+			gap: 0.5rem;
+			i {
+				border-radius: 100%;
+				border: 1.5px solid $green;
+				font-size: 11px;
+				width: 1.2rem;
+				height: 1.2rem;
+				display: flex;
+				padding-left: 0.5px;
+				align-items: center;
+				justify-content: center;
+			}
+		}
 	}
 }
