create About-us and Solutions section --updating

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
-@import "components/library", "components/header", "components/requirement", "components/inspiration";
+@import "components/library", "components/header", "components/requirement", "components/inspiration",
+	"components/about", "components/solution";
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
 
 *,
