--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -5,22 +5,27 @@ header {
 	background-color: $blue;
 	position: relative;
 	padding-bottom: 1rem;
+	width: 100%;
 	nav {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		width: 100%;
 		padding: 1rem 0.5rem;
 		padding-bottom: 2rem;
 		border-bottom: 1px solid #ffffff80;
-		div {
-			a {
-				@include text-xl;
-				font-weight: 800;
-				letter-spacing: 0.1rem;
+		.navbar {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			div {
+				a {
+					@include text-xl;
+					font-weight: 800;
+					letter-spacing: 0.1rem;
+				}
+				ul {
+					display: none;
+				}
 			}
-			ul {
-				display: none;
+			button {
+				width: 2rem;
 			}
 		}
 	}
@@ -52,7 +57,11 @@ header {
 			position: absolute;
 			top: 1rem;
 			right: 1rem;
+			width: 2.6rem;
 		}
+	}
+	.show {
+		display: block;
 	}
 
 	section {
@@ -102,6 +111,24 @@ header {
 					align-items: center;
 					justify-content: center;
 				}
+			}
+		}
+		img {
+			display: none;
+		}
+	}
+}
+
+@media (min-width: 640px) {
+	section {
+		div {
+			p {
+				font-weight: 400;
+				margin-bottom: 2rem;
+				width: 60%;
+			}
+			a {
+				width: 40% !important;
 			}
 		}
 		img {
