--- a/src/components/_footer.scss
+++ b/src/components/_footer.scss
@@ -104,61 +104,105 @@ footer {
 		margin: 2rem 0;
 		text-align: center;
 		@include text-xs;
+		div {
+			display: flex;
+			flex: none;
+			justify-content: center;
+			align-items: center;
+			gap: 1.5rem;
+		}
+		p {
+			margin-top: 2rem;
+		}
 	}
 }
 
 @media (min-width: 640px) {
-	.main-footer {
-		margin-top: 1.5rem;
-		display: grid;
-		grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
-		gap: 1.5rem;
-		p {
-			@include text-sm;
-		}
-		div {
-			h5 {
-				@include text-lg;
-				font-weight: 700;
-				color: $blue;
-				margin-bottom: 0.85rem;
+	footer {
+		.main-footer {
+			margin-top: 1.5rem;
+			display: grid;
+			grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
+			gap: 1.5rem;
+			p {
+				@include text-sm;
+				width: 100%;
 			}
-			.form-input {
-				width: 60%;
-				.input-group {
-					background-color: #d9d9d9;
-					display: flex;
-					align-items: center;
-					justify-content: center;
-					border-radius: 3rem;
-					margin-top: 0.5rem;
-					button {
+			div {
+				h5 {
+					@include text-lg;
+					font-weight: 700;
+					color: $blue;
+					margin-bottom: 0.85rem;
+				}
+				.form-input {
+					width: 100%;
+					.input-group {
+						background-color: #d9d9d9;
 						display: flex;
 						align-items: center;
 						justify-content: center;
-						width: 2rem;
-						height: 2rem;
-						background-color: $blue;
-						color: $white;
+						border-radius: 3rem;
+						margin-top: 0.5rem;
+						button {
+							display: flex;
+							align-items: center;
+							justify-content: center;
+							width: 2rem;
+							height: 2rem;
+							background-color: $blue;
+							color: $white;
+						}
+					}
+				}
+			}
+			.certification {
+				div {
+					display: grid;
+					grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+					gap: 1rem;
+					div {
+						background-color: #f2f2e4;
+						width: 100%;
+						padding: 1rem;
+						display: flex;
+						align-items: center;
+						justify-content: center;
+						color: $blue;
+						border-radius: 1rem;
 					}
 				}
 			}
 		}
-		.certification {
+	}
+}
+
+@media (min-width: 768px) {
+	footer {
+		.main-footer {
+			grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
+			p {
+				width: 70%;
+			}
 			div {
-				display: grid;
-				grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
-				gap: 1rem;
-				div {
-					background-color: #f2f2e4;
-					width: 100%;
-					padding: 1rem;
-					display: flex;
-					align-items: center;
-					justify-content: center;
-					color: $blue;
-					border-radius: 1rem;
+				.form-input {
+					width: 70%;
 				}
+			}
+		}
+		.bot-footer {
+			margin: 2rem 0;
+			text-align: center;
+			@include text-xs;
+			div {
+				display: flex;
+				flex: content;
+				justify-content: space-between;
+				align-items: center;
+				gap: 1.5rem;
+			}
+			p {
+				margin-top: 2rem;
 			}
 		}
 	}
