Responsive View Page is Clear

--- a/src/components/_inspiration.scss
+++ b/src/components/_inspiration.scss
@@ -112,3 +112,60 @@ main {
 		}
 	}
 }
+
+@media (min-width: 1024px) {
+	main {
+		.inspiration {
+			.container {
+				width: 90%;
+				padding-top: 5rem !important;
+				position: relative;
+				z-index: 1;
+
+				.inspiration-header {
+					width: 35% !important;
+					h2 {
+						@include text-5xl;
+					}
+					a {
+						@include text-xl;
+					}
+				}
+				.inspiration-body {
+					display: grid;
+					grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+					gap: 0.3rem;
+					padding: 0 0rem !important;
+				}
+			}
+		}
+	}
+}
+@media (min-width: 1280px) {
+	main {
+		.inspiration {
+			.container {
+				width: 90%;
+				padding-top: 5rem !important;
+				position: relative;
+				z-index: 1;
+
+				.inspiration-header {
+					width: 35% !important;
+					h2 {
+						@include text-5xl;
+					}
+					a {
+						@include text-xl;
+					}
+				}
+				.inspiration-body {
+					display: grid;
+					grid-template-columns: repeat(4, minmax(0, 1fr)) !important;
+					gap: 1.5rem;
+					padding: 0 0rem !important;
+				}
+			}
+		}
+	}
+}
