--- a/src/components/_about.scss
+++ b/src/components/_about.scss
@@ -126,3 +126,30 @@
 		}
 	}
 }
+
+@media (min-width: 1280px) {
+	.about-us {
+		padding-top: 14rem;
+		.about-body {
+			.container {
+				h2 {
+					@include text-5xl;
+					width: 80%;
+					margin: 0 auto;
+				}
+				.grid {
+					width: 80%;
+					margin: 0 auto;
+					display: grid;
+					grid-template-columns: repeat(2, minmax(0, 1fr));
+					gap: 1.5rem;
+				}
+
+				a {
+					margin: 2rem auto 0 auto;
+					width: 40% !important;
+				}
+			}
+		}
+	}
+}
