--- a/src/components/_requirement.scss
+++ b/src/components/_requirement.scss
@@ -88,3 +88,71 @@ main {
 		}
 	}
 }
+
+@media screen and (min-width: 1024px) {
+	main {
+		.requirements {
+			.container {
+				display: grid;
+				grid-template-columns: repeat(2, minmax(0, 1fr));
+				gap: 1rem;
+				h2 {
+					@include text-4xl;
+					font-weight: 800;
+					text-transform: uppercase;
+					color: $blue;
+				}
+				div {
+					p {
+						margin: 0rem 0;
+					}
+					a {
+						text-decoration: underline;
+					}
+				}
+			}
+			.carousel {
+				.owl-carousel {
+					.item {
+						margin: 2rem 0.5rem !important;
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and (min-width: 1024px) {
+	main {
+		.requirements {
+			.container {
+				display: grid;
+				grid-template-columns: repeat(2, minmax(0, 1fr));
+				gap: 1rem;
+				h2 {
+					@include text-5xl;
+					font-weight: 800;
+					text-transform: uppercase;
+					color: $blue;
+				}
+				div {
+					width: 70%;
+					p {
+						margin: 0rem 0;
+					}
+					a {
+						text-decoration: underline;
+					}
+				}
+			}
+			.carousel {
+				margin-top: 3rem;
+				.owl-carousel {
+					.item {
+						margin: 2rem 0.5rem !important;
+					}
+				}
+			}
+		}
+	}
+}
