--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -33,14 +33,17 @@ header {
 		position: absolute;
 		display: none;
 		width: 100%;
-		height: 100vh;
+		height: 80vh;
 		color: $white;
 		top: 0;
 		left: 0;
-		z-index: 10;
+		z-index: 10 !important;
 		background-color: $blue;
+		padding: 1rem;
 		.mobile-menu {
 			li {
+				z-index: 10 !important;
+
 				margin: 0 0 0 auto;
 				position: relative;
 				top: 4rem;
@@ -55,6 +58,7 @@ header {
 			}
 		}
 		li {
+			z-index: 10 !important;
 			margin: 0 0 0 auto;
 			position: relative;
 			top: 4rem;
@@ -77,6 +81,9 @@ header {
 	}
 	.show {
 		display: block;
+		position: relative;
+		z-index: 20 !important;
+		background-color: rgb(12, 54, 87);
 	}
 
 	section {
@@ -130,6 +137,8 @@ header {
 		}
 		.img-header {
 			display: none;
+			z-index: 1;
+			position: relative;
 		}
 	}
 }
@@ -189,6 +198,7 @@ header {
 			}
 		}
 		menu {
+			height: 40vh;
 			.mobile-menu {
 				display: none;
 				li {
@@ -232,6 +242,7 @@ header {
 		section {
 			display: grid;
 			grid-template-columns: repeat(2, minmax(0, 1fr));
+			align-items: center;
 			gap: 1.5rem;
 			padding: 1rem 0;
 			div {
@@ -285,6 +296,8 @@ header {
 				display: block;
 				width: 80%;
 				margin: 0 auto;
+				z-index: 1;
+				position: relative;
 			}
 		}
 	}
